Simplificando as questões.

--- a/10 - Segunda avaliação/av02.tex
+++ b/10 - Segunda avaliação/av02.tex
@@ -66,11 +66,11 @@
 
           $$MELANCIA$$
 
-    \item Considere uma árvore AVL inicialmente vazia e pretende-se inserir os elementos na ordem indicada:\label{QAVL_1}
+    \item Imagine uma árvore AVL inicialmente vazia na qual desejamos inserir os elementos na ordem especificada:\label{QAVL_1}
 
           $$X = \{93, 31, 11, 40, 52, 95\}$$
 
-          Após a inserção e balanceamento de cada valor, item a item indique: (a) a árvore AVL final e (b) a quantidade que cada rotação ocorreu:
+          Após a inserção e balanceamento de cada valor, item a item, indique: (a) a árvore AVL final e (b) a quantidade que cada rotação ocorreu:
 
           \begin{center}
               \begin{tabular}{|c|c|c|c|c|}
@@ -100,15 +100,14 @@
           \begin{enumerate}
               \item Em uma tabela com 4 posições, utilizando o método da dobra no formato binário;
               \item Em uma tabela com 8 posições utilizando método da divisão;
-              \item Em uma tabela com 16 posições pelo método da multiplicação;
           \end{enumerate}
           Não realize o tratamento de colisões, mas indique na tabela abaixo quantas colisões ocorreram:
           \begin{center}
-              \begin{tabular}{|c|c|c|c|}
+              \begin{tabular}{|c|c|c|}
                   \hline
-                  Alternativa & a) & b) & c) \\
+                  Alternativa & a) & b) \\
                   \hline
-                  Colisões    & \  & \  & \  \\
+                  Colisões    & \  & \  \\
                   \hline
               \end{tabular}
           \end{center}
