Corrigindo sentido no texto

--- a/10 - Segunda avaliação/av02.tex
+++ b/10 - Segunda avaliação/av02.tex
@@ -91,7 +91,7 @@
               \item Esta é uma HEAP-MAX.
               \item Para converter em uma HEAP-MIN basta inverter os valores do jeito que estão posicionados.
               \item Se a prioridade do item 72 mudar para 85, o elemento 84 não mudará de posição.
-              \item 88 e 84 estão no mesmo nível, portanto os 4 próximos números tem que ser menores que 84.
+              \item 88 e 84 estão no mesmo nível, por isso os 4 próximos números tem que ser menores que 84.
               \item A modificação de qualquer um dos elementos 20,25,14,8 para o valor de 86 reduz a prioridade do elemento 84.
           \end{enumerate}
 
