--- a/10 - Segunda avaliação/av02.tex
+++ b/10 - Segunda avaliação/av02.tex
@@ -52,6 +52,7 @@
 \begin{document}
 
 \large \textbf{Nome: \tiny ......................................................................................................................................................................................................}
+\vfill
 \begin{enumerate}[label=\textbf{Q\arabic*}]
     \item Foram calculados a frequência com que determinadas palavras aparecem em um deteminado texto:
           \begin{center}
@@ -92,11 +93,11 @@
               \item Para converter em uma HEAP-MIN basta inverter os valores do jeito que estão posicionados.
               \item Se a prioridade do item 72 mudar para 85, o elemento 84 não mudará de posição.
               \item 88 e 84 estão no mesmo nível, por isso os 4 próximos números tem que ser menores que 84.
-              \item A modificação de qualquer um dos elementos 20,25,14,8 para o valor de 86 reduz a prioridade do elemento 84.
+              \item A modificação de qualquer um dos elementos $20,25,14,8$ para o valor de 86 reduz a prioridade do elemento 84.
           \end{enumerate}
 
     \item Calcule mapeamentos dos valores:
-          $$\{33,14,32,12\}$$
+          $$\{33,14,32,12,9,15,37\}$$
           \begin{enumerate}
               \item Em uma tabela com 4 posições, utilizando o método da dobra no formato binário;
               \item Em uma tabela com 8 posições utilizando método da divisão;
